--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ div{
   margin: 5% 5% 0% 5%;
 }
 #outer{
+  /* make the meme at the center */
     width: 65%;
     margin: 5%;
     margin-left: 17.5%;
